Starting to work on delete method
